Add specialities.