@@ -4,9 +4,12 @@ import de.zettsystems.h3comsim.unit.common.AbstractUnit;
 import de.zettsystems.h3comsim.unit.common.AttackType;
 import de.zettsystems.h3comsim.unit.common.Movement;
 
-import java.util.Collections;
+import java.util.Set;
 
-public class Harpies extends AbstractUnit {
+import static de.zettsystems.h3comsim.unit.common.UnitSpeciality.MOVE_BACK;
+import static de.zettsystems.h3comsim.unit.common.UnitSpeciality.NO_RETALIATION;
+
+public class Harpy extends AbstractUnit {
 
     private final static String NAME = "Harpies";
     private final static int ATTACK = 6;
@@ -20,8 +23,8 @@ public class Harpies extends AbstractUnit {
     private final static int COST = 130;
     private final static AttackType ATTACK_TYPE = AttackType.HAND_TO_HAND;
 
-    public Harpies() {
-        super(HEALTH, Collections.emptySet());
+    public Harpy() {
+        super(HEALTH, Set.of(MOVE_BACK, NO_RETALIATION));
     }
 
     @Override
