@@ -3,8 +3,9 @@ package de.zettsystems.h3comsim.unit.concrete;
 import de.zettsystems.h3comsim.unit.common.AbstractUnit;
 import de.zettsystems.h3comsim.unit.common.AttackType;
 import de.zettsystems.h3comsim.unit.common.Movement;
+import de.zettsystems.h3comsim.unit.common.UnitSpeciality;
 
-import java.util.Collections;
+import java.util.Set;
 
 public class Medusa extends AbstractUnit {
 
@@ -21,7 +22,7 @@ public class Medusa extends AbstractUnit {
     private final static AttackType ATTACK_TYPE = AttackType.LONG_RANGE;
 
     public Medusa() {
-        super(HEALTH, Collections.emptySet());
+        super(HEALTH, Set.of(UnitSpeciality.PETRYFYING, UnitSpeciality.NO_HAND_TO_HAND_PENALTY));
     }
 
     @Override
