@@ -1,10 +1,11 @@
 package de.zettsystems.h3comsim.unit.concrete;
 
-import com.google.common.collect.ImmutableSet;
 import de.zettsystems.h3comsim.unit.common.AbstractUnit;
 import de.zettsystems.h3comsim.unit.common.AttackType;
 import de.zettsystems.h3comsim.unit.common.Movement;
 import de.zettsystems.h3comsim.unit.common.UnitSpeciality;
+
+import java.util.Set;
 
 public class MedusaQueen extends AbstractUnit {
     private final static String NAME = "Medusa Queen";
@@ -20,7 +21,7 @@ public class MedusaQueen extends AbstractUnit {
     private final static AttackType ATTACK_TYPE = AttackType.LONG_RANGE;
 
     public MedusaQueen() {
-        super(HEALTH, ImmutableSet.of(UnitSpeciality.PETRYFYING, UnitSpeciality.NO_HAND_TO_HAND_PENALTY));
+        super(HEALTH, Set.of(UnitSpeciality.PETRYFYING, UnitSpeciality.NO_HAND_TO_HAND_PENALTY));
     }
 
     @Override
