@@ -4,7 +4,7 @@ import de.zettsystems.h3comsim.unit.common.AbstractUnit;
 import de.zettsystems.h3comsim.unit.common.AttackType;
 import de.zettsystems.h3comsim.unit.common.Movement;
 
-import java.util.Collections;
+import java.util.Set;
 
 import static de.zettsystems.h3comsim.unit.common.UnitSpeciality.NO_HAND_TO_HAND_PENALTY;
 
@@ -23,7 +23,7 @@ public class Titan extends AbstractUnit {
     private final static AttackType ATTACK_TYPE = AttackType.LONG_RANGE;
 
     public Titan() {
-        super(HEALTH, Collections.singleton(NO_HAND_TO_HAND_PENALTY));
+        super(HEALTH, Set.of(NO_HAND_TO_HAND_PENALTY));
     }
 
     @Override
